<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nn.where4eatclient.MainMenuActivity">

    <TextView
        android:id="@+id/main_menu_text"
        android:text="@string/submit_title"
        android:layout_width="wrap_content"
        android:layout_height="32sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_menu_text"
        android:text="@string/see_maps"
        android:id="@+id/see_maps_button"
        android:onClick="goToMap"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/see_maps_button"
        android:text="@string/see_foods"
        android:id="@+id/see_foods_button"
        android:onClick="seeFood"
        />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/see_foods_button"
    android:text="@string/post_new_food"
    android:id="@+id/post_new_food_button"
    android:onClick="postFood"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_new_food_button"
        android:text="@string/go_to_search"
        android:id="@+id/go_to_search_button"
        android:onClick="goToSearch"
        />

</RelativeLayout>
