<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SonucScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nn.where4eatclient.SubmitItemActivity">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preview_image"
        android:adjustViewBounds="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preview_image"
        android:text="@string/take_a_picture"
        android:id="@+id/take_a_picture_button"
        android:onClick="takeAPicture"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_name"
        android:id="@+id/food_prompt"
        android:layout_below="@id/take_a_picture_button"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venue_name"
        android:id="@+id/venue_prompt"
        android:layout_below="@+id/food_prompt"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/place_picker_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_place"
        android:id="@+id/place_picker_button"
        android:onClick="pickAPlace"
        android:layout_below="@+id/food_prompt"
        android:layout_alignEnd="@+id/food_prompt" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="80sp"
        android:id="@+id/description_prompt"
        android:text="@string/description"
        android:layout_below="@+id/food_rating"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/submit_item_button" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/food_rating"
        android:numStars="5"
        android:rating="5.0"
        android:stepSize="0.5"
        android:layout_below="@+id/place_picker_button"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_item"
        android:id="@+id/submit_item_button"
        android:onClick="submitItem"
        android:layout_below="@+id/description_prompt"
        android:layout_alignParentEnd="true" />

    <!--com.facebook.share.widget.ShareButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fb_share_button"
        android:layout_below="@+id/submit_item_button"
        android:layout_centerHorizontal="true" /-->

</RelativeLayout>
    </ScrollView>
